--- a/botaodrawer.html
+++ b/botaodrawer.html
@@ -29,26 +29,56 @@
 
     <script>
       class Navbar {
-        constructor() {
-          this.toggleBtns = document.querySelectorAll(".toggle-btn");
-          this.drawerMenu = document.querySelector(".drawer-menu");
-          this.isOpen = false;
-          this.toggleBtns.forEach(btn => btn.addEventListener("click", this.toggleNavbar.bind(this)));
-        }
+  constructor() {
+    this.toggleBtns = document.querySelectorAll(".toggle-btn");
+    this.drawerMenu = document.querySelector(".drawer-menu");
+    this.isOpen = false;
+    this.toggleBtns.forEach(btn => btn.addEventListener("click", this.toggleNavbar.bind(this)));
+    this.initializeDatabase();
+  }
 
-        toggleNavbar(event) {
-          this.isOpen = !this.isOpen;
-          if (this.isOpen) {
-            this.drawerMenu.style.left = "0";
-            this.toggleBtns.forEach(btn => btn.textContent = "=");
-          } else {
-            this.drawerMenu.style.left = "-250px";
-            this.toggleBtns.forEach(btn => btn.textContent = "=");
-          }
-        }
-      }
+  toggleNavbar(event) {
+    this.isOpen = !this.isOpen;
+    if (this.isOpen) {
+      this.drawerMenu.style.left = "0";
+      this.toggleBtns.forEach(btn => btn.textContent = "=");
+    } else {
+      this.drawerMenu.style.left = "-250px";
+      this.toggleBtns.forEach(btn => btn.textContent = "=");
+    }
+  }
+
+  async initializeDatabase() {
+    try {
+      this.db = await this.openDatabase();
+      await this.createStore();
+    } catch (error) {
+      console.error("Error initializing database:", error);
+    }
+  }
+
+  openDatabase() {
+    return new Promise((resolve, reject) => {
+      const request = indexedDB.open("drawerDB", 1);
+      request.onerror = () => reject(request.error);
+      request.onsuccess = () => resolve(request.result);
+      request.onupgradeneeded = (event) => {
+        const db = event.target.result;
+        db.createObjectStore("drawerState", { keyPath: "id" });
+      };
+    });
+  }
+
+  async createStore() {
+    const transaction = this.db.transaction(["drawerState"], "readwrite");
+    const store = transaction.objectStore("drawerState");
+    await store.add({ id: 1, isOpen: this.isOpen });
+  }
+}
 
       const navbar = new Navbar();
     </script>
+
+    
   </body>
 </html>
